View Issue Details

IDProjectCategoryView StatusLast Update
0032234CommunityOCCT:Configurationpublic2021-04-03 12:50
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
Product Version7.5.0 
Target Version7.6.0Fixed in Version7.6.0 
Summary0032234: Configuration, OSD_Process::UserName() - avoid using getpwuid() unimplemented by Emscripten SDK
DescriptionCalling getpwuid() within WebAssembly build raises an assertion indicating that Emscripten SDK doesn't yet implement this function:
exception thrown: getpwuid: TODO DRAWEXE.js:1:432486
Uncaught (in promise) getpwuid: TODO

Practically speaking this function will be unlikely implemented in any reasonable way within WebAssembly environment (application should ask user name explicitly), and can be just skipped.

https://dev.opencascade.org/content/opencascade-webassembly-use
Steps To ReproduceRun code involving OSD_Process::UserName() within WebAssembly application (like IGES reader/writer).
TagsNo tags attached.
Test case numberNot required

Activities

git

2021-03-23 22:18

administrator   ~0099685

Branch CR32234 has been created by kgv.

SHA-1: cc9333614fee9a815eb00844784a34d615619f41


Detailed log of new commits:

Author: kgv
Date: Sun Mar 21 23:26:56 2021 +0300

    0032234: Configuration, OSD_Process::UserName() - avoid using getpwuid() unimplemented by Emscripten SDK

kgv

2021-03-23 22:18

developer   ~0099686

Please raise the patch
- OCCT: branch CR32234.

bugmaster

2021-03-27 14:08

administrator   ~0099778

Combination -
OCCT branch : WEEK-12
master SHA - 154b4635b8bd4c6c527738f59fd7d9d4f2cda509
a87b7ddc8cb44606b91e3f37113847c3f5f50fdc
Products branch : WEEK-12 SHA - 0779901f5e4c7f986db723d4a181df62079baf71
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 17172.74000000034 / 17208.820000000378 [-0.21%]
Products
Total CPU difference: 11546.97000000013 / 11481.660000000102 [+0.57%]
Windows-64-VC14:
OCCT
Total CPU difference: 18612.140625 / 18668.765625 [-0.30%]
Products
Total CPU difference: 12857.140625 / 12879.75 [-0.18%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2021-04-03 12:50

administrator   ~0100053

Branch CR32234 has been deleted by inv.

SHA-1: cc9333614fee9a815eb00844784a34d615619f41

Related Changesets

occt: master 6c2cf030

2021-03-21 20:26:56

kgv


Committer: bugmaster Details Diff
0032234: Configuration, OSD_Process::UserName() - avoid using getpwuid() unimplemented by Emscripten SDK Affected Issues
0032234
mod - src/OSD/OSD_Process.cxx Diff File

Issue History

Date Modified Username Field Change
2021-03-22 09:58 kgv New Issue
2021-03-22 09:58 kgv Assigned To => kgv
2021-03-22 10:02 kgv Assigned To kgv => bugmaster
2021-03-22 10:02 kgv Status new => resolved
2021-03-22 10:02 kgv Additional Information Updated
2021-03-22 10:02 kgv Status resolved => reviewed
2021-03-22 10:11 kgv Description Updated
2021-03-23 22:18 git Note Added: 0099685
2021-03-23 22:18 kgv Note Added: 0099686
2021-03-23 22:18 kgv Additional Information Updated
2021-03-27 14:08 bugmaster Note Added: 0099778
2021-03-27 14:08 bugmaster Status reviewed => tested
2021-03-27 14:10 bugmaster Test case number => Not required
2021-03-27 14:19 bugmaster Changeset attached => occt master 6c2cf030
2021-03-27 14:19 bugmaster Status tested => verified
2021-03-27 14:19 bugmaster Resolution open => fixed
2021-04-03 12:50 git Note Added: 0100053